cabal-version: 1.12
name:           monad-deferrable
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/quickdudley/monad-deferrable#readme>
homepage:       https://github.com/quickdudley/monad-deferrable#readme
bug-reports:    https://github.com/quickdudley/monad-deferrable/issues
author:         Jeremy List
maintainer:     quick_dudley@gmail.com
copyright:      2019 Jeremy List
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/quickdudley/monad-deferrable

library
  exposed-modules:
      Control.Monad.Deferrable
  other-modules:
      Paths_monad_deferrable
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      transformers,
      containers
  default-language: Haskell2010

test-suite monad-deferrable-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_monad_deferrable
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , monad-deferrable
  default-language: Haskell2010
